fix: scrollbar color

--- a/src/index.css
+++ b/src/index.css
@@ -333,7 +333,7 @@ a {
 }
 
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: transparent;
     /* sfondo della track */
 }
 
@@ -350,7 +350,7 @@ a {
 * {
     scrollbar-width: thin;
     /* sottile */
-    scrollbar-color: #FF7F50 #f1f1f1;
+    scrollbar-color: #E75924 #f1f1f1;
     /* thumb + track */
 }
 
